<?xml version="1.0"?>
<package>
  <name>interface</name>
  <version>2.3.1</version>
  <description>TiaGo-specific launch files needed to run
    navigation on the TiaGo robot.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pal_navigation_msgs</build_depend>
 
  <run_depend>pal_navigation_msgs</run_depend>
</package>
